# failfast-developer-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pre-knowledge-plan.md  pyproject.toml
.github/workflows/: ci.yml
src/failfast/: __init__.py  cli.py  engine.py  models.py  server.py
src/failfast/analyzers/: __init__.py  ai_cache.py  ai_fallback.py  ai_guardrails.py  ai_loops.py  ai_observability.py  ai_parsing.py  ai_prompts.py  ai_providers.py  bandit.py  complexity.py  retry.py  ruff.py  timeout.py
src/failfast/profiles/: __init__.py
src/failfast/reporters/: __init__.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py
tests/: test_cli.py  test_engine.py  test_models.py  test_reporters.py  test_server.py
tests/fixtures/: bad_agents.py  bad_architecture.py  bad_cache.py  bad_fallback.py  bad_guardrails.py  bad_prompts.py  bad_retry.py  bad_telemetry.py  clean_ai.py  clean_api.py  clean_fallback.py  complex_function.py  insecure_code.py  no_timeout.py
tests/test_analyzers/: __init__.py  test_ai_agent.py  test_ai_architecture.py  test_retry.py  test_timeout.py
